# s21_SmartCalc_v1.0

./: README.md
src/: Makefile
src/Model/: checker.c  checker.h  finance_calc.c  finance_calc.h  polish.c  polish.h  stack.c  stack.h
src/Tests/: checker_t.c  finance_calc_t.c  polish_t.c  run_tests.c  tests.h
src/View/: CMakeLists.txt  main.cpp  s21_financewindow.cpp  s21_financewindow.h  s21_mainwindow.cpp  s21_mainwindow.h  s21_mainwindow.ui
